src/files/client/custom/modules/dubas-dark-theme/frontend/less/dubas-dark/custom.less
a:focus, a:hover {
    color: #fff;
    text-decoration: none;
}

@media screen and (min-width: 768px) {
    body[data-navbar="side"] #navbar .navbar-right, 
    body .minimized.side-menu-opened #navbar .navbar-right {
        bottom: 20px;
        position: fixed;
        top: 0;
        left: 0;
        height: 70px !important;
        width: 100%;
        background-color: @navbar-bg;
        margin-left: 210px;
        padding-right: 210px
    }
}

body[data-navbar="side"] #navbar .navbar .navbar-form.global-search-container {
    padding-left: 0;
    padding-right: 0;
    margin-top: 20px;
}

@media screen and (min-width:768px) {
    a.btn.btn-link.global-search-button {
        margin-top: -15px;
    }
    
    body[data-navbar="side"] #navbar .navbar-right>li>a, body.minimized.side-menu-opened #navbar .navbar-right>li>a {
        padding-top: 28px !important;
    }
}

#navbar .navbar .navbar-right-container input.global-search-input {
    width: 260px;
    padding-bottom: 4px;
    padding-top: 4px;
    border: none;
    box-shadow: none;
    border-bottom: 1px #575e66 solid;
    transition: border-bottom 0.4s;
}

#navbar .navbar .navbar-right-container input.global-search-input:focus {
    border-bottom: 1px #999 solid;
}

div#main {
    margin-top: 5%;
}

body[data-navbar="side"] #navbar ul.tabs>li>a {
    height: 45px;
}

body[data-navbar="side"] #navbar ul.tabs li>a,
body.minimized.side-menu-opened #navbar ul.tabs li>a {
    padding-top: 13px;
    padding-bottom: 9px;
    padding-left: 12px;
    padding-right: 20px
}

tr.list-row:hover {
    background-color: #242a30;
}

.panel-body .list-group-item:hover {
    background-color: #242a30;
}

.panel-title {
    font-size: 15px;
    line-height: 17px;
    font-weight: normal;
}

body>footer>p.credit {
    margin: 0
}

body>footer>p.credit:after {
    content: " / theme made by devcrm.it";
}

.dialog-record .modal-content>.modal-body {
    background-color: #f3f3f3;
}

@media screen and (min-width:768px) {
    body[data-navbar="side"] #navbar .navbar-right>li.open>a, body.minimized.side-menu-opened #navbar .navbar-right>li.open>a {
        background-color: #172436;
        color: #000;
    }
}

.navbar-inverse .navbar-nav>li>a {
    color: #dfdfdf;
}

.navbar-inverse .navbar-nav>li>a:focus {
    color: #fff;
    background-color: transparent;
}

@media screen and (min-width: 768px) {
    body[data-navbar="side"] #navbar ul.tabs li.tab>a, 
    body.minimized.side-menu-opened #navbar ul.tabs li.tab>a {
        padding-left: 12px;
        padding-right: 20px;
        margin-top: 8px !important;
        margin-bottom: 8px !important;
    }

    body[data-navbar="side"] #navbar ul.tabs li>a, 
    body.minimized.side-menu-opened #navbar ul.tabs li>a {
        padding-top: 13px !important;
        padding-bottom: 12px !important;
        padding-left: 12px;
        padding-right: 20px;
    }

    body[data-navbar="side"] #navbar ul.tabs>li>a {
        height: 45px !important;
    }
}

@media screen and (min-width: 768px) {
    body[data-navbar="side"] #notifications-panel {
        margin-top: 70px !important;
    }

    body[data-navbar="side"] #navbar .navbar-right>li.open>a, 
    body.minimized.side-menu-opened #navbar .navbar-right>li.open>a {
        color: #fff !important;
        background-color: @navbar-link-active-bg !important;
    }

    body[data-navbar="side"] .notifications-badge-container>.notifications-button>.number-badge {
        top: 25px !important;
    }
}

.form-control {
    transition: border 0.4s;
}

.form-control:focus {
    border-color: @input-border;
    border-bottom-color: @input-border-focus;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

ul.dropdown-menu {
    border: 1px solid #434a52;
}

.dialog-record .modal-content>.modal-body {
    background-color: @panel-bg-value;
}

body[data-navbar="side"] ul.nav.navbar-nav.tabs {
    border-right: 1px solid #1c2126;
}

body[data-navbar=side] .stick-sub {
    margin-top: 68px;
}

* {
    scrollbar-width: thin;
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
    width: 8px;
}

*::-webkit-scrollbar-thumb {
    border-radius: 20px;
    width: 8px;
}

*::-webkit-scrollbar-thumb:hover {
    background-color: @navbar-inverse-bg;
    border-radius: 20px;
    width: 8px;
}

